2002-03-13 Vino Crescini <jvcrescini@yahoo.com>

	* portscan.c :

	  - Added -s and -e options to specify port range.

2002-03-03 Vino Crescini <jvcrescini@yahoo.com>

	* Makefile :

	  - Some cleanup.

	* ChangeLog : 

	  - Changelog started.